# lana-bank

./: .df-credentials.json  .envrc  .gitignore  Cargo.toml  Dockerfile  Dockerfile.release  Makefile  README.md  auth.bash  dataform.json  docker-compose.docker.yml  docker-compose.yml  flake.nix  notes  package.json  pipeline.tmp.yml  pnpm-lock.yaml  pnpm-workspace.yaml  typos.toml
.cursor/: mcp.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
bats/: accounting.bats  audit.bats  chart-of-accounts.bats  ci-setup-suite.bash  credit-facility-1.bats  credit-facility.bats  customer.bats  dashboard.bats  deposit_account.bats  document.bats  fixed-term-loan.bats  helpers.bash  lana-sim-time.yml  lava.yml  loan.bats  sumsub.bats  superuser.bats  (+4 more)
core/custodian/: Cargo.toml
core/custodian/.sqlx/: query-19b728e129b22d0d850c7b7503d8412002fbc40faccdc14fd4ec76e07ece8c81.json  query-407546efb4a839b0fc63930f35022541b79910031d262761a7ec96ae3ad188c5.json  query-4b9f0a1fce3c31efef78b53622e7cf4884b20c0e27453bde10ea2ed0b75d7ec5.json  query-835e09a9a156a544853f2ca78b23eb92246e17c85560cf9172c36e00ede384a3.json  query-8d8eeb049125c83dff75f63d684149ec242b84665cf0cb4a84dc959728ff76e5.json  query-8f3534215c137ce4c9fef1b588bfcf5ab2fc00d653767b6250976c575a4f5821.json  query-9c866c58c17cd363b9b38135c2f28e8fb161fa1daca1972265fc2affbe3769a1.json  query-a2ac64862543b59179322570db0bdc3a07a372ce29e01ba544b8e19e8a469b6b.json  query-c8f300d0548798586d6debfdd13d17ae33b4072e710a767393c3f4d40256c4d3.json  query-c9b73f240e54f44775c6d258410ce8d075ecd566eb54b5a0138563d88bdd21df.json  query-d4f9915957f11fa37a47e9bf5ed0ae4421418696f1b98003ec21bdac483e41d1.json  query-f6daed7b14d0d0c710ba3fe9005b697fbb7874882082a657dc7c6fbff239bf5c.json  query-f880e611c9106f152123041d391e8622ae6627dad7b3edca8cdc1d7663d13d21.json
core/custodian/src/: entity.rs  error.rs  lib.rs  primitives.rs  repo.rs
core/deposit/: Cargo.toml
core/deposit/.sqlx/: query-04e9fe97f19059e0bf36dfee58b0b11c5f603dd09713f75fc440b1ddd1ed589d.json  query-168b726be5930e1112ad158c455bb692b4fe3cbf86ed6e07a463800297685815.json  query-17b7a095e76a84b03c5f0c7b38e4d37da7e667c5550a87d5af2eb23f0ef23e60.json  query-1f4ab93dd25d5e57350e4f9e089562d3988dac58a8d3dd6448c79329fbd2bf50.json  query-253f173128747ab15dfd97869fefe3a4b7ff59391ad86c03652dae9d0a3df5e9.json  query-55f3537dc4791cda070521b30df181f3eed2dc7fdd5d0a6fb64391f4ed0302ba.json  query-769c2c049e3a1ce3797c1d465b27ad8f116d143e3a960387a8c8851b900548b6.json  query-a94284d6ed8d55f07772a69f9f406245b4362b81fea7b5c1f5d34934a04e56ff.json  query-d17a8eecb086b7593ee3e83c3a3576dcdcabb95d9c559c34d62547e3d36ac2fa.json  query-df0eb4298a26ac09dca4d645e42de3db5fbd5b24ad2c99a6bb4183c5c6f86d43.json  query-e71409b8344a5c35c30aa0a7fae83af45a830f71a0d00f40b0d62a4e125af27c.json  query-e99ee286fc20a1957a2bcff1c70808d7bc6b8ae881c6d445bec38d79a6a032af.json  query-f4215515cb8b8e4823a28867e118e7dc5877a809396cc1687fb287654dfbc126.json  query-f8c9ed912a52f218c4858c713ae6845bf88a8a917637eaa3a32a73f7bca8200a.json  query-ff7860866588a2cbc1377bf5184eec1874f1e5ff4be805c0913600c8ddb3ee4f.json
core/deposit/src/: chart_of_accounts_integration.rs  error.rs  event.rs  for_subject.rs  history.rs  lib.rs  primitives.rs  publisher.rs  subject.rs
core/deposit/src/account/: entity.rs  error.rs  mod.rs  primitives.rs  repo.rs
core/deposit/src/deposit/: entity.rs  mod.rs
core/deposit/src/ledger/: error.rs  mod.rs  primitives.rs
core/deposit/src/ledger/templates/: initiate_withdraw.rs
core/deposit/src/ledger/velocity/: mod.rs  overdraft_prevention.rs  withdrawal_limit.rs
core/deposit/src/processes/: mod.rs
core/deposit/src/processes/approval/: job.rs  mod.rs
core/deposit/src/withdrawal/: entity.rs  error.rs  mod.rs  repo.rs
core/deposit/tests/: chart_of_accounts_integration.rs  deposit.rs  helpers.rs  withdraw.rs
lana/customer-onboarding/: Cargo.toml
lana/customer-onboarding/src/: config.rs  job.rs  lib.rs
lana/customer-onboarding/src/job/: create_deposit_account.rs  mod.rs
lana/customer-onboarding/src/kratos_customer/: config.rs  error.rs  mod.rs
lana/customer-server/: Cargo.toml
lana/customer-server/src/: auth.rs  config.rs  lib.rs  primitives.rs
lana/customer-server/src/graphql/: authenticated_subject.rs  customer.rs  deposit_account.rs  deposit_account_history.rs  mod.rs  schema.graphql  schema.rs
lana/customer-server/src/graphql/credit_facility/: mod.rs
lana/notification/: Cargo.toml
lana/notification/src/: error.rs  lib.rs
lana/notification/src/email/: config.rs  error.rs  executor.rs  listener_job.rs  mod.rs  sender_job.rs  templates.rs
lana/notification/src/email/smtp/: error.rs  mod.rs
lava/dashboard/: Cargo.toml
lava/dashboard/.sqlx/: query-0ebb4610d15560c27387407f8f4c2e56314e81974755efa3e45f3b75098d70fb.json  query-1cf180b95af97c6283a226a09d37ae16dbfa0f82848c3adc514d66f0fc77bb20.json  query-26c9c28dac4b89c72cf360714eb446908e8dcc5b638752fd17e1471ea51c76f4.json  query-4c501d51596547a3e2eac2dd5e8b80e1dbd522eb8406976845f59e26ad50b720.json  query-e1e73a5c64d5ad94b8115bd50c3a54ccde692f4c9a8f1a51cd1a325c6ed78eaf.json
lava/dashboard/src/: error.rs  job.rs  lib.rs  primitives.rs  repo.rs  values.rs
lava/dashboard/tests/: count_facilities.rs
lava/events/: Cargo.toml
lava/events/src/: lib.rs
lib/bitfinex/: Cargo.toml
lib/bitfinex/src/: bfx.rs  config.rs  main.rs  questions.md  websocket.rs
(+1511 files in other folders)
