[package]
name = "customer-server"
version = "0.3.32-dev"
edition = "2021"

[features]

fail-on-warnings = []

[dependencies]
lana-app = { path = "../app" }

serde = { workspace = true }
serde_json = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
