[package]
name = "lava-events"
version = "0.2.18-dev"
edition = "2021"

[features]

fail-on-warnings = []

[dependencies]
governance = { path = "../../core/governance" }
core-user = { path = "../../core/user" }
outbox = { path = "../../lib/outbox" }
lava-ids = { path = "../ids" }
lava-money = { path = "../money" }

chrono = { workspace = true }
serde = { workspace = true }
