[package]
name = "bfx"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde", "clock"] }
clap = { version = "4.5.4", features = ["derive"] }
digest = "0.10.7"
futures-channel = "0.3.30"
futures-util = "0.3.30"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.12.4", features = ["json", "native-tls"] }
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"
